# Huginn

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci-dashboard.yml  ci-hub.yml  ci-worker.yml  release.yml
dashboard/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  index.css  main.tsx
deploy/: .env.example  .env.prod.example  Caddyfile  build-artifacts.sh  docker-compose.prod.yml  docker-compose.yml
deploy/k8s/: dashboard-deployment.yaml  hub-deployment.yaml  hub-service.yaml  ingress.example.yaml  mcp-deployment.yaml  migrate-job.yaml  secret.example.yaml
docs/: architecture.md  auth.md  deployment.md  enrollment.md  mcp-agents.md  mcp.md  security.md
hub/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
hub/alembic/: env.py
hub/app/: __init__.py  background.py  config.py  db.py  main.py
hub/tests/: conftest.py  test_actions.py  test_audit_chain.py  test_auth.py  test_custom_actions.py  test_enrollment.py  test_events.py  test_execution.py  test_mcp_tokens.py  test_mfa.py  test_rbac.py  test_schedules.py  test_security.py  test_security_features.py  test_tasks_sweep.py  (+2 more)
mcp/: Dockerfile  pyproject.toml
mcp/app/: __init__.py  config.py  context.py  hub_client.py  server.py
mcp/tests/: test_hub_client.py  test_server.py
scripts/: install.sh  uninstall.sh
worker/: Makefile  go.mod
(+115 files in other folders)
